samples/_failures_safe/1761305858_66cf93_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5e5859f8.c: In function ‘tokenize_next’:
./samples/SAFE/__tmp_5e5859f8.c:164:9: error: expected identifier at end of input
  164 |         token->
      |         ^~~~~
./samples/SAFE/__tmp_5e5859f8.c:164:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5e5859f8.c:164:9: error: expected declaration or statement at end of input
